--- a/Kontur.ImageTransformer/packages.config
+++ b/Kontur.ImageTransformer/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AsyncUsageAnalyzers" version="1.0.0-alpha003" targetFramework="net462" developmentDependency="true" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
 </packages>
